--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -30,7 +30,12 @@ body{
     z-index: -1;
 }
 
-.box{
+.upperField{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -39,25 +44,13 @@ body{
     width: 40vw;
     background: hsla(0, 0%, 100%, 0.2);
     border-radius: 53px;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
-.upperField{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-items: center;
-    height: 20vh;
-    width: 100%;
+    padding: 1vh;
 }
 
 .upperField h2{
     font-weight: 100;
-    font-size: 5rem;
+    font-size: 9rem;
     width: 100%;
     text-align: center;
 
@@ -68,45 +61,7 @@ body{
     justify-content: center;
     align-items: center;
 
-    height: 20vh;
-}
-
-.upperField #pauseandplay{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    height: 10vh;
-    width: 100%;
-}
-
-.lowerField{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-items: center;
-    height: 20vh;
-    width: 100%;
-
-}
-
-.lowerField p{
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    line-height: 10vh;
-    font-size: 1.5rem;
-    color: #121212;
-
-    transition: all 0.5s ease;
-}
-
-h2.lowEnough{
-    color: #EEEEEE;
-}
-
-p.lowEnough{
-    color: #EEEEEE;
+    height: 70%;
 }
 
 @keyframes topToBottom{
@@ -120,9 +75,9 @@ p.lowEnough{
 }
 
 
-button{
+.upperField button{
     width: 60%;
-    height: 30%;
+    height: 20%;
     background: #ffffff79;
     color: #121212;
     border: none;
