--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -86,6 +86,8 @@ body{
     color: #121212;
     border: none;
     border-radius: 10px;
+
+    font-size: 5rem;
 }
 
 
@@ -204,9 +206,18 @@ input[type=number] {
 
 
 @media (max-width: 768px) {
-    .box{
+    .upperField{
         width: 80vw;
     }
+
+    .upperField h2{
+        font-size: 10rem;
+    }
+
+    .upperField button{
+        font-size: 3rem;
+    }
+
     footer .goDown{
         width: 15vw;
         height: 4vw;
@@ -228,9 +239,18 @@ input[type=number] {
   
   /* Media query for smaller phones */
   @media (max-width: 480px) {
-    .box{
+    .upperField{
         width: 90vw;
     }
+
+    .upperField h2{
+        font-size: 8rem;
+    }
+
+    .upperField button{
+        font-size: 3rem;
+    }
+
     footer .goDown{
         width: 20vw;
         height: 5vw;
