--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -116,82 +116,6 @@ body{
     opacity: 0.5;
 }
 
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-footer .goDown{
-    width: 5vw;
-    height: 2vw;
-
-    position: absolute;
-    bottom: calc(100% - 2vw);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background: #EEEEEEb3;
-    border-radius: 10px 10px 0 0;
-
-    transition: all 0.5s ease;
-}
-
-footer .goDown img{
-    height: 90%;
-
-    transition: all 0.5s ease;
-}
-
-footer .goDown.down{
-    bottom: 0;
-}
-
-footer .goDown.down img{
-    transform: rotate(180deg);
-}
-
-footer .controller{
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    height: calc(100% - 2vw);
-    width: 30%;
-    background: #EEEEEEb3;
-    border-radius: 30px 30px 0 0;
-
-    transition: all 0.5s ease;
-}
-
-footer .controller p{
-    height: 100%;
-    width: max-content;
-    text-align: center;
-    font-size: 3rem;
-    color: #000000;
-    position: relative;
-}
-
-footer .controller input{
-    height: 70%;
-    width: 30%;
-    border: none;
-    background: #EEEEEEb3;
-    color: #000000;
-    border-radius: 30px;
-    text-align: center;
-    font-size: 2.5rem;
-}
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -287,4 +211,85 @@ input[type=number] {
         opacity: 1;
         background: black;
     }
+}
+
+#container{
+    position: absolute;
+    background-color: #EEEEEE;
+    bottom: 15px;
+    left: 10px;
+    width: 250px;
+    height: 10vh;
+    overflow: hidden;
+    display: flex;
+    align-items:center;
+    flex-direction: column;
+
+    padding: 1vh;
+    border-radius: 10px;
+    visibility: hidden;
+
+
+}
+
+#icon{
+    background-color: #FFF;
+    padding: 5px;
+    height: 5vh;
+    width: 5vh;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 40px;
+    left: 15px;
+    z-index: 5;
+}
+
+#container .OtherIcons{
+    background-color: #FFF;
+    height: 5vh;
+    width: 5vh;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#container .div1 { grid-area: 2 / 1 / 3 / 2; }
+#container .div2 { grid-area: 2 / 2 / 3 / 3; }
+#container .div3 { grid-area: 2 / 3 / 3 / 4; }
+#container .div4 { grid-area: 1 / 3 / 2 / 4; }
+#container .div5 { grid-area: 1 / 2 / 2 / 3; }
+#container .div6 { grid-area: 1 / 1 / 2 / 2; }
+
+#container input{
+    width: 35px;
+    height: 20px;
+    text-align: center;
+    border-radius: 5px;
+
+    margin: 0 10px 0 10px;
+
+    color: #121212;
+}
+
+#container p{
+    font-size: 30px;
+    color: #121212;
+}
+
+#firstSetting{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#secondSetting{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
