--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -90,27 +90,72 @@ body{
     font-size: 5rem;
 }
 
-
-#settings{
-    width: 80vw;
+.menu {
+    position: absolute;
+    width: 20vw;
+    height: auto;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 
-    height: 10vh;
+    padding: 10px;
+    border-radius: 10px;
 
-    position: absolute;
-    left: 10vw;
 }
 
-#settings input{
-    width: 75vw;
+.menu-content {
+    display: none;
+    background-color: #EEEEEEb3;
+    border-radius: 10px;
+    padding: 1vh 0;
+    width: 100%;
+    text-align: center;
+    color: #121212;
+}
+
+/* Show the menu content when hovering over the icon */
+.menu:hover .menu-content {
+    display: block;
+}
+
+/* Positioning adjustments for each menu */
+.bl { bottom: 1vh; left: 1vh; }
+.br { bottom: 1vh; right: 1vh; }
+.tr { top: 5vh; right: 1vh; }
+.tl { top: 5vh; left: 1vh; }
+
+.icon {
+    filter: invert(1);
+    cursor: pointer;
+    margin-bottom: 1vh;
+}
+
+.menu img{
+    width: 5vh;
+}
+
+
+.footerDisplay {
+    width: 35%;
     border-radius: 10px;
     border: none;
-    padding: 0 0 0 1vw;
+    padding-left: 1vw;
     background: #EEEEEEb3;
+    color: #121212;
+
+    text-align: center;
 }
+
+.setting p{
+    color: #121212;
+}
+
+.setting{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 
 .running{
     opacity: 0.5;
