--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -1,8 +1,19 @@
+:root{
+    --firstColor: #EEEEEE;
+    --secondColor: #FF4A4A;
+    --thirdColor: #C4FF93;
+    --fourthColor: #121212;
+    --fiftColor: #EEEEEE76;
+}
+
+
+
+
 *{
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-    color: #EEEEEE;
+    color: var(--firstColor);
 }
 
 header img{
@@ -15,7 +26,7 @@ header img.lowEnough{
 }
 
 body{
-    background: #FF4A4A;
+    background: var(--secondColor);
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -24,7 +35,7 @@ body{
 }
 
 #timerBg{
-    background: #C4FF93;
+    background: var(--thirdColor);
     height: 0vh;
     width: 100vw;
     position: absolute;
@@ -56,7 +67,7 @@ body{
     width: 100%;
     text-align: center;
 
-    color: #121212;
+    color: var(--fourthColor);
 
     display: flex;
     flex-direction: column;
@@ -82,8 +93,8 @@ body{
 .upperField button{
     width: 60%;
     height: 20%;
-    background: #ffffff79;
-    color: #121212;
+    background: var(--fiftColor);
+    color: var(--fourthColor);
     border: none;
     border-radius: 10px;
 
@@ -105,12 +116,12 @@ body{
 
 .menu-content {
     display: none;
-    background-color: #EEEEEEb3;
+    background-color: var(--fiftColor);
     border-radius: 10px;
     padding: 1vh 0;
     width: 100%;
     text-align: center;
-    color: #121212;
+    color: var(--fourthColor);
 }
 
 /* Show the menu content when hovering over the icon */
@@ -140,14 +151,14 @@ body{
     border-radius: 10px;
     border: none;
     padding-left: 1vw;
-    background: #EEEEEEb3;
-    color: #121212;
+    background: var(--firstColor)b3;
+    color: var(--fourthColor);
 
     text-align: center;
 }
 
 .setting p{
-    color: #121212;
+    color: var(--fourthColor);
 }
 
 .setting{
@@ -260,7 +271,7 @@ input[type=number] {
 
 #container{
     position: absolute;
-    background-color: #EEEEEE;
+    background-color: var(--firstColor);
     bottom: 15px;
     left: 10px;
     width: 250px;
@@ -278,7 +289,7 @@ input[type=number] {
 }
 
 #icon{
-    background-color: #FFF;
+    background-color: var(--firstColor);
     padding: 5px;
     height: 5vh;
     width: 5vh;
@@ -293,7 +304,7 @@ input[type=number] {
 }
 
 #container .OtherIcons{
-    background-color: #FFF;
+    background-color: var(--firstColor);
     height: 5vh;
     width: 5vh;
     border-radius: 10px;
@@ -317,12 +328,12 @@ input[type=number] {
 
     margin: 0 10px 0 10px;
 
-    color: #121212;
+    color: var(--fourthColor);
 }
 
 #container p{
     font-size: 30px;
-    color: #121212;
+    color: var(--fourthColor);
 }
 
 #firstSetting{
@@ -337,4 +348,8 @@ input[type=number] {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.br img{
+    border-radius: 10px;
 }
