--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -81,7 +81,7 @@ body{
 
 @keyframes topToBottom{
     from{
-        height: 100vh;
+        height: 100%;
     }
 
     to{
@@ -421,4 +421,40 @@ input[type="range"]::-moz-range-thumb {
   border: 1px solid var(--secondColor);
   
   box-shadow: -407px 0 0 400px var(--secondColor);
+}
+
+#overlay{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    z-index: 4;
+    pointer-events: none;
+
+    background-image: url(Img/Vignette.png);
+    filter: invert(1);
+    opacity: 0;
+
+    background-size: cover;
+}
+
+@keyframes overlayAnimation {
+    0%{
+        opacity: 0;
+    }
+    20%{
+        opacity: 0.1;
+    }
+    40%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 0.3;
+    }
+    70% {
+        opacity: 0;
+    }
+    100%{ 
+        opacity: 0.5;
+    }
 }
