--- a/Timerstyle.css
+++ b/Timerstyle.css
@@ -121,10 +121,15 @@ body{
     flex-direction: column;
     align-items: center;
 
-
     padding: 10px;
     border-radius: 10px;
+}
 
+.menu::before{
+    position: relative;
+    width: 10px;
+    height: 10px;
+    background: black;
 }
 
 .menu-content {
@@ -181,12 +186,6 @@ body{
     align-items: center;
     justify-content: space-around;
 }
-
-
-.running{
-    opacity: 0.5;
-}
-
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
